# LOOP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: persona.example.txt
loop_core/: __init__.py  api.py  bayesian.py  controller.py  persona.py  rag.py
loop_core/memory/: __init__.py  associative_memory.py  consolidator.py  long_term.py  working_memory.py
tests/: test_api.py  test_associative_memory.py  test_bayesian.py  test_consolidator.py  test_controller.py  test_long_term_memory.py  test_persona.py  test_persona_coordinator.py  test_working_memory.py
