[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-core"
version = "0.1.0"
description = "Layered Operational Ontology Pipeline - A cognitive architecture for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Andrew West"}
]
keywords = ["ai", "cognitive-architecture", "memory", "bayesian", "loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
groq = ["groq>=0.4.0"]
openai = ["openai>=1.0.0"]
all = ["groq>=0.4.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/andrewowest/loop-core"
Repository = "https://github.com/andrewowest/loop-core"

[tool.pytest.ini_options]
testpaths = ["tests"]
